Complete backend architecture and add Docker support